app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */

@import "bootstrap";
@import url(http://fonts.googleapis.com/css?family=Raleway);

* {
  font-family: Raleway;
}

body { padding-top: 100px }

input[type="text"] {
	padding: 15px 10px;
}

input[type="password"] {
  padding: 15px 10px;
}

.actions {
	margin-top: 20px;
}

.navbar-bottom {
	margin: 50px 0 0;
	.navbar-inner {
		border-radius: 0;
	}
}

.navbar-top {
  margin-bottom:25px
}

//SUGGESTIONS BUTTON
.btn.suggestions_button {
	margin-top:10px;
	font: {
	color:#fff;
	family:Raleway;
	}
}

.navbar-fixed-top {
  .btn-group {
    margin:10px 0px;
    .btn {
      border: none;
      background-color: transparent !important;
      background-repeat: repeat-x;
      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="transparent", endColorstr="transparent");
      background-image: -khtml-gradient(linear, left top, left bottom, from(transparent), to(transparent));
      background-image: -moz-linear-gradient(top, transparent, transparent);
      background-image: -ms-linear-gradient(top, transparent, transparent);
      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, transparent), color-stop(100%, transparent));
      background-image: -webkit-linear-gradient(top, transparent, transparent);
      background-image: -o-linear-gradient(top, transparent, transparent);
      background-image: linear-gradient(transparent, transparent);
      color: #fff !important;
      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.00);
      -webkit-font-smoothing: antialiased;
      font: {
        family:Raleway
      }
    }
  }
  
  .brand {
    position: absolute;
    left: 44%;
    margin-top: 5px;
    a {
      color: #DE403C;
      text-decoration: none;
      font :{
        weight: bold;
        size: 2em;
        family: Raleway;
      }
    }
  }
}


.btn {
  a { 
  color: #DE403C;
  font-weight: bold;
  text-decoration: none;
  }
}

.signin_hero{
  border-radius: 10px;
  background-color: #ebebeb;
  text-align: center;
  padding: 10px 10px 10px 10px;
  margin: 0 0 30px;
  .container {
    .field {
      .loginfield {
        width: 250px;
      }
      .passwordfield {
        width: 250px;
      }
    }

    .actions {
      .submitbutton {
        padding: 4 10 4 10;
        background-color: transparent;
        color: #DE403C;
        border-radius: 5px;
      }
    }

    width: 100%;
    .col {
      float: left;
      display: block;
      &.left {
        width: 40%;
        margin: 30px 40px;
      }
      &.right {
        margin: 20px 40px;
        img {
          width: 75px;
          height: 75px;
          &.primary {
            height: auto;
            width: auto;
          }
        }
      }
    }
  }
}

